tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_wrong_method_name/execute__tests__noirc_frontend_tests_check_trait_wrong_method_name_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Method with name `does_not_exist` is not part of trait `Default2`, therefore it can't be implemented
   ┌─ src/main.nr:11:12
   │
11 │         fn does_not_exist(x: Field, y: Field) -> Self {
   │            --------------
   │

Aborting due to 1 previous error
