tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_wrong_method_name/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Method with name `does_not_exist` is not part of trait `Default2`, therefore it can't be implemented
   ┌─ src/main.nr:11:12
   │
11 │         fn does_not_exist(x: Field, y: Field) -> Self {
   │            --------------
   │

Aborting due to 1 previous error
